# PngOptimizier

./: .gitignore  Cargo.toml  PngOptimizer.exe.manifest  PngOptimizer.rc  README.md  build.rs  justfile
gui/: mainview.fl
src/: main.rs
