[package]
name = "png_optimizer"
version = "1.2.1"
edition = "2021"
description = "PNG Optimizer"

[package.metadata.bundle]
name = "PngOptimizer"
identifier = "com.allen.png_optimizer"
icon = ["asset/icon.png"]
version = "1.2.0"
copyright = "Copyright (c) Allen Dang 2022. All rights reserved."
category = "Developer Tool"
short_description = "PNG Optimizer"

[profile.release]
strip = "symbols"
lto = "fat"
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
strip = "symbols"
opt-level = "z"
codegen-units = 1

[dependencies]
fltk = "1"
fl2rust-macro = "0.7"
fltk-theme = "0.7"
tokio = { version = "1.40.0", features = ["full"] }
oxipng = { version = "9", features = [
  "parallel",
  "zopfli",
  "filetime",
], default-features = false }
rayon = "1.10.0"

[build-dependencies]
embed-resource = "3.0"
